[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
diesel = { version = "2.1.3", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["r2d2", "postgres", "deadpool"] }
dotenvy = "0.15.7"
serde = { version = "1.0.189", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
